css/custom.css
.triangle:before,
.triangle:after {
  position: absolute;
  top: -6px;
  left: 9px;
  display: inline-block;
  border-right: 7px solid transparent;
  border-bottom: 7px solid #ccc;
  border-left: 7px solid transparent;
  border-bottom-color: #fff;
  content: '';
}

.triangle:after {
  top: -8px;
  border-bottom-color: #ccc;
  z-index: -10;
}

.dropdown-menu > li > a:hover {
  background-color: rgb(223,240,216);
}

.logo {
  float: left;
  height: 100px;
  width: 100px;
  background-image: url(../img/logo.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: 50% 35%;
  border-radius: 50% 50%;
  margin-right: 10px;
}

.quick-nav {
  display: table;
  margin: 1rem auto;
}

.carousel-indicators {
  bottom: 0;
}

.carousel-caption {
  padding-bottom: 10px;
}

.useful-links {
  margin-top: 14px;
}

.useful-links-img {
  padding-left: 6px;
  padding-right: 6px;
}

.useful-links-img img {
  margin-bottom: 6px;
}

.ovl-index {
  padding: 6px 6px;
}

figure {
  float: left;
  margin: 10px;
  position: relative;
}

figcaption {
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: rgba(255,255,255, 0.6);
  padding: 0 5px;
  visibility: hidden;
  transition: 0.5s linear 0s;
  opacity: 0;
}

figure:hover figcaption {
  visibility: visible;
  opacity: 1;
}

img {
    max-width: 100%;
    background-color: rgb(192,192,192);
}

a figcaption {
  color: #333;
}

a.spoiler:after {
  content: " [-]";
}

a.spoiler.collapsed:after {
  content: " [+]";
}

.news-about {
  clear: both;
}

/*Фотогалерея*/

.thumb img {
  filter: none; /* IE6-9 */
  -webkit-filter: grayscale(1);
  border-radius: 4px;
  background-color: #fff;
  border: 1px solid #ddd;
  padding:5px;
}

.thumb:hover img {
  filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(0);
}

.thumb {
  margin-bottom: 10px;
  height: 100%;
  flex: 1 1 auto;
}

.title-visible {
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: rgba(255,255,255, 0.6);
  padding: 0 10px 5px 10px;
  visibility: hidden;
  transition: 0.5s linear 0s;
  opacity: 0;
  color: #333;
}

.bottom-title:hover .title-visible {
  visibility: visible;
  opacity: 1;
}

/*/Фотогалерея*/

/*Полезные советы*/

.glyphicon {
  margin-right: 10px;
}
.panel-collapse .panel-body {
  padding: 0px;
}
.panel-body table tr td {
  padding-left: 15px
}
.panel-body .table {
  margin-bottom: 0px;
}

/*/Полезные советы*/

#error {
  color: #ff0000;
  margin-top: 5px;
  margin-bottom: 5px;
}

.flex {
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
  justify-content: center;
}

.brand-block {
  max-width: 80%;
  margin: 0 auto;
}

.brand-block .flex {
  align-items: center;
  justify-content: space-around;
}

/*.table > tbody > tr > td:last-child {
  white-space: nowrap;
}*/

.blue {
  color: #337ab7;
}

.review-list {
  padding: 2px 0 8px 0;
  font-size: 16px;
}

.pdf-color {
  color: #e72017;
}

video {
  max-width: 100%;
  height: auto;
}

article {
  margin-bottom: 4rem;
}

td + .halfscreen {
  width: 60%;
}

figure h4 {
  margin-bottom: 10px;
}

.photoalbum-item {
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
  flex-wrap: wrap;
  flex: 1 1 auto;
}

